# email-sender-1

./: .avg-exclude-marker  .cline_mcp_settings.json  .codacy.yaml  .coveragerc  .dockerignore  .env.example  .env.qdrant  .gitattributes  .gitignore  .gitmodules  .golangci.yaml  .golangci.yml  .hygen.js  .kilocodemodes  .markdown-config-readme.md  .markdownlint.json  .opencode.json  .roomodes  .smart-infrastructure.pid  .vscodeignore  1  2025-05-28-errors.md  2025-0701-1614-problemes.md  2025-0706-resolution-plan.md  2025-0707- assimilation-plan.md  @git_conflict_resolution_steps.md  ACHIEVEMENT_100_PERCENT_SUCCESS.md  ACTIONS_030_032_IMPLEMENTATION_REPORT.md  ACTIONS_033_041_IMPLEMENTATION_REPORT.md  ACTIONS_042_044_IMPLEMENTATION_REPORT.md  ACTIONS_042_050_IMPLEMENTATION_REPORT.md  ACTIONS_046_060_IMPLEMENTATION_REPORT.md  ACTIONS_061_075_IMPLEMENTATION_REPORT.md  ACTIONS_076_080_IMPLEMENTATION_REPORT.md  ADAPTATION_V66_COMPLETE_SUCCESS.md  AGENT.md  AGENTS.md  ALL_ISSUES_RESOLVED_FINAL.md  ANALYSE_DIFFICULTS_PHASE1.md  API_DOC.md  (+846 more)
.amp/: config.json
.augment/: AUGMENT_IMPLEMENTATION_GUIDELINES.md  README.md  browser-config.json  chat_guidelines.md  config.json
.build/: README.md
.cline/: config.json  (+1 more)
scripts/mcp_project/: Install-MCPClient.ps1  MCPClient.Tests.Fixed.ps1  MCPClient.Tests.InModuleScope.ps1  MCPClient.Tests.Simple.ps1  MCPClient.psm1  README.md  Run-Tests.ps1  Stop-MCPServer.ps1  Test-MCPClient.ps1  Update-Roadmap.ps1  client.py  pyproject.toml  test_client.py  test_server.py
scripts/mcp_project/docs/: api.md  error_handling.md  guidelines.md
(+22014 files in other folders)
